# AI-Engineering-learning

./: README.md
project-1-hello-gemini/: README.md  main.py  pyproject.toml
project-2-AI-Chatbot/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
project-2-AI-Chatbot/src/: main.py
project-2-AI-Chatbot/src/chatbot/: chatbot.py
project-2-AI-Chatbot/src/config/: settings.py
project-2-AI-Chatbot/src/factories/: llm_service_factory.py
project-2-AI-Chatbot/src/interfaces/: llm_service.py
project-2-AI-Chatbot/src/services/: gemini_service.py
project-2-AI-Chatbot/src/test/: test_ main.py  test_chatbot.py  test_factory.py  test_settings.py
project-2-AI-Chatbot/src/utils/: logger.py
