[project]
name = "llm-chatbot"
version = "0.1.0"
description = "Professional AI Chatbot built during the AI Engineering Bootcamp."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Deepak Pandey" }
]

keywords = [
    "ai",
    "chatbot",
    "llm",
    "gemini",
    "openai",
    "python"
]

dependencies = [
    "google-genai>=2.11.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]
